Fix the overlap issue for the list of services

--- a/styles.css
+++ b/styles.css
@@ -243,6 +243,10 @@ hr {
   padding-bottom: 2.5rem;
 }
 
+.softsolves-services {
+  height: 160vh;
+}
+
 .softsolves-services .content-container {
   width: 20vw;
   display: flex;
@@ -260,6 +264,14 @@ hr {
 
 .softsolves-services .cards-container-row-two {
   justify-content: center;
+  position: relative;
+  bottom: 10rem;
+  z-index: 1;
+}
+
+.softsolves-services .cards-container-row-three {
+   position: relative;
+  bottom: 20rem;
 }
 
 .services-heading, .processes-heading {
